# ARES

./: .gitignore  CLAUDE.md  CLAUDE_SESSION_009.md  LICENSE  README.md  SESSION_001_GRAPH_SCHEMA.md  SESSION_002_DIALECTICAL_FOUNDATION.md  SESSION_003_AGENT_FOUNDATION.md  SESSION_004_CONCRETE_AGENTS.md  SESSION_005_EVIDENCE_EXTRACTORS.md  SESSION_006_COORDINATOR_ORCHESTRATION 2fd7e255421c80e39a31c1a438742eb5.md  SESSION_006_COORDINATOR_PROMPT_PATCHED.md  SESSION_007_MEMORY_STREAM.md  SESSION_007_MEMORY_STREAM_PROMPT_REVISED.md  SESSION_009_LLM_INFRASTRUCTURE_PROMPT.md  SESSION_LOG.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
Old Files (DO NOT USE)/: CLAUDE_Feb_4_2026_updated.md  CLAUDE_OLD.md  SESSION_006_COORDINATOR_PROMPT.md
ares/: __init__.py
ares/dialectic/: __init__.py
ares/dialectic/agents/: __init__.py  architect.py  base.py  context.py  oracle.py  patterns.py  skeptic.py
ares/dialectic/agents/strategies/: __init__.py  client.py  live_cycle.py  llm_strategy.py  observability.py  prompts.py  protocol.py  rule_based.py
ares/dialectic/coordinator/: __init__.py  coordinator.py  cycle.py  multi_turn.py  orchestrator.py  validator.py
ares/dialectic/evidence/: __init__.py  fact.py  packet.py  provenance.py
ares/dialectic/evidence/extractors/: __init__.py  protocol.py  windows.py
ares/dialectic/memory/: __init__.py  chain.py  entry.py  errors.py  protocol.py  stream.py
ares/dialectic/memory/backends/: __init__.py  in_memory.py
ares/dialectic/messages/: __init__.py  assertions.py  protocol.py
ares/dialectic/scripts/: __init__.py  benchmark_report.py  benchmark_runner.py  run_live_cycle.py  sample_packets.py  scenario_corpus.py
ares/dialectic/tests/: __init__.py  test_integration.py
ares/dialectic/tests/agents/: __init__.py  test_architect.py  test_base.py  test_context.py  test_oracle.py  test_skeptic.py
ares/dialectic/tests/coordinator/: __init__.py  test_coordinator.py  test_cycle.py  test_multi_turn.py  test_orchestrator.py  test_validator.py
ares/dialectic/tests/evidence/: __init__.py  test_fact.py  test_packet.py  test_provenance.py
ares/dialectic/tests/memory/: __init__.py  conftest.py  test_backend.py  test_chain.py  test_entry.py  test_stream.py
ares/dialectic/tests/messages/: __init__.py  (+2 more)
ares/graph/: __init__.py  schema.py  store.py  validators.py
tests/: __init__.py  test_schema.py  test_store.py  test_validators.py
(+23 files in other folders)
